# OneClaw

./: .gitignore  README.md  main.tsx  oneclaw.config.json  package.json  tsconfig.json
.github/workflows/: ci.yml
cli/handlers/: auth.ts
commands/chrome/: chrome.tsx
components/: IdeOnboardingDialog.tsx  LogSelector.tsx  Onboarding.tsx  RemoteCallout.tsx  RemoteEnvironmentDialog.tsx  ResumeTask.tsx  Stats.tsx  TeleportError.tsx
constants/: outputStyles.ts  prompts.ts  spinnerVerbs.ts  system.ts
kernel/: pyproject.toml
kernel/oneclaw_kernel/: __init__.py  config.py  hooks.py  mcp.py  plugins.py  runtime.py  sandbox.py  server.py  worktree.py
kernel/oneclaw_kernel/tools/: __init__.py  registry.py
kernel/tests/: test_runtime.py
plugins/: example.plugin.mjs
runtime/: preload.ts
scripts/: install-smoke.mjs  install.mjs  kernel-test.mjs  package-release.sh  release-check.mjs  sandbox-smoke.mjs
services/: voice.ts
src/: bun-shim.d.ts  cli.mts  config.mts  types.mts  utils.mts
tests/: bridge-server.test.mts  cli.test.mts  config.test.mts  frontend-registry.test.mts  kernel-client.test.mts  mcp-registry.test.mts  memory-manager.test.mts  memory-store.test.mts  permission-policy.test.mts  plugin-registry.test.mts  prompt-assembler.test.mts  providers-auth.test.mts  query-engine.test.mts  query-loop.test.mts  react-app.test.mts  runtime-bridge-state.test.mts  session-backend.test.mts  session-engine.test.mts  task-manager.test.mts  team-registry.test.mts  test-support.mts  usage-tracker.test.mts
utils/: logoV2Utils.ts  stats.ts  status.tsx  teleport.tsx
(+95 files in other folders)
