[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oneclaw-kernel"
version = "0.1.0"
requires-python = ">=3.10"
description = "Python kernel runtime for OneClaw"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
